# the_gitrog_monster

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: card.rs  expansion.rs  main.rs  metacard.rs  scryfall.rs  set.rs  spellbinder.rs
src/database/: pool.rs
src/spellbinder/: expansion.rs  metacard.rs
src/spellbinder/expansion/: model.rs  query.rs
src/spellbinder/metacard/: config.rs  model.rs  query.rs
